# esp32_project

./: README.md
blink/: CMakeLists.txt  sdkconfig
blink/common/input_iot/: input_iot.c  input_iot.h
blink/common/output_iot/: CMakeLists.txt
blink/main/: blink_example_main.c
hello_world/: CMakeLists.txt
hello_world/common/input_iot/: CMakeLists.txt  input_iot.c  input_iot.h
hello_world/main/: CMakeLists.txt  hello_world_main.c
http_request/: sdkconfig
http_request/main/: http_request_example_main.c
ledc/main/: ledc_fade_example_main.c
smart_config/: sdkconfig
smart_config/main/: CMakeLists.txt  smartconfig_main.c
ssl_mutual_auth/main/: CMakeLists.txt  app_config.c  app_config.h  app_main.c
station/: CMakeLists.txt  sdkconfig
station/common/dht11/: CMakeLists.txt
station/common/http_server_app/: CMakeLists.txt  http_server_app.c  http_server_app.h
station/common/input_iot/: input_iot.h
station/common/ledc_app/: CMakeLists.txt  ledc_app.c  ledc_app.h
station/common/output_iot/: output_dev.c
station/common/ws2812b/: CMakeLists.txt  ws2812b.c  ws2812b.h
station/html/: index.html
station/main/: CMakeLists.txt  component.mk  station_example_main.c
uart_events/main/: uart_events_example_main.c
